--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,17 @@ Changelog = "https://github.com/statisticsnorway/ssb-dash-framework/releases"
 [tool.poetry.dependencies]
 python = "^3.10"
 click = ">=8.0.1"
+dash = ">=2.15.0"
+dash-bootstrap-components = "1.6.0"
+pandas = ">=2.2.0"
+rpy2 = ">=3.5.15"
+dash-mantine-components = ">=0.14.4"
+dash-ag-grid = ">=31.2.0"
+dash-bootstrap-templates = ">=1.2.4"
+duckdb = ">=1.0.0"
+pyarrow = ">=17.0.0"
+dapla-toolbelt = ">=2.0.8, <4.0.0"
+mpmath = ">=1.3.0"
 
 [tool.poetry.group.dev.dependencies]
 pygments = ">=2.10.0"
