--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ duckdb = ">=1.0.0"
 pyarrow = ">=17.0.0"
 dapla-toolbelt = ">=2.0.8, <4.0.0"
 mpmath = ">=1.3.0"
+orjson = "^3.10.16"
 
 [tool.poetry.group.dev.dependencies]
 pygments = ">=2.10.0"
