--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ dapla-toolbelt = ">=2.0.8, <4.0.0"
 mpmath = ">=1.3.0"
 orjson = "^3.10.16"
 ssb-statstruk = "^0.0.9"
+scikit-learn = "^1.6.1"
 
 [tool.poetry.group.dev.dependencies]
 pygments = ">=2.10.0"
