--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ mpmath = ">=1.3.0"
 orjson = "^3.10.16"
 ssb-statstruk = "^0.0.9"
 scikit-learn = "^1.6.1"
+ipykernel = "^6.29.5"
 
 [tool.poetry.group.dev.dependencies]
 pygments = ">=2.10.0"
