--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -24,6 +24,8 @@ concurrency:
 jobs:
   build:
     runs-on: ubuntu-latest
+    container:
+      image: ghcr.io/statisticsnorway/docker-rpython-base:latest
     steps:
       - name: Check out the repository
         uses: actions/checkout@v4
