--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,16 +20,14 @@ dash = ">=2.15.0"
 dash-bootstrap-components = "1.6.0"
 pandas = ">=2.2.0"
 rpy2 = ">=3.5.15"
-dash-mantine-components = ">=0.14.4"
+dash-mantine-components = ">=0.14.4" # Is this still used?
 dash-ag-grid = ">=31.2.0"
 dash-bootstrap-templates = ">=1.2.4"
 duckdb = ">=1.0.0"
 pyarrow = ">=17.0.0"
 dapla-toolbelt = ">=2.0.8, <4.0.0"
-mpmath = ">=1.3.0"
+mpmath = ">=1.3.0" # Not sure why this is there
 orjson = "^3.10.16"
-ssb-statstruk = "^0.0.9"
-scikit-learn = "^1.6.1"
 ipykernel = "^6.29.5"
 
 [tool.poetry.group.dev.dependencies]
