--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ dapla-toolbelt = ">=2.0.8, <4.0.0"
 mpmath = ">=1.3.0" # Not sure why this is there
 orjson = "^3.10.16"
 ipykernel = "^6.29.5"
+psycopg2-binary = "^2.9.10"
 
 [tool.poetry.group.dev.dependencies]
 pygments = ">=2.10.0"
