--- a/.devcontainer/postgres/docker-compose.yml
+++ b/.devcontainer/postgres/docker-compose.yml
@@ -20,10 +20,10 @@ services:
     depends_on:
       - postgres
 
-  python-container:
-    image: mcr.microsoft.com/devcontainers/python:3.12
+  devcontainer:
+    image: ghcr.io/statisticsnorway/docker-rpython-dev:latest
     volumes:
-      - .:/workspace
+      - ../..:/workspace:cached
     working_dir: /workspace
     command: sleep infinity
     depends_on:
