Update to new folder

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -48,7 +48,7 @@ jobs:
 
       - name: Build doc with Sphinx
         run: |
-          poetry run sphinx-build docs docs/_build
+          poetry run sphinx-build docs/sphinx docs/_build
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
