--- a/.devcontainer/postgres/devcontainer.json
+++ b/.devcontainer/postgres/devcontainer.json
@@ -18,8 +18,19 @@
                 "r.alwaysUseActiveTerminal": true,
                 "r.bracketedPaste": true,
                 "r.sessionWatcher": true,
-                "r.plot.useHttpgd": true
+                "r.plot.useHttpgd": true,
+                "terminal.integrated.profiles.linux": {
+                    "bash": {
+                        "path": "bash",
+                        "args": [
+                            "-c",
+                            "poetry shell; exec bash"
+                        ]
+                    }
+                },
+                "terminal.integrated.defaultProfile.linux": "bash"
             }
         }
-    }
+    },
+    "postCreateCommand": "poetry install"
 }
