--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ requires-python = ">=3.10,<4.0"
 dynamic = ["classifiers"]
 dependencies = [
     "click>=8.0.1",
+    "pandas (>=2.3.1,<3.0.0)",
 ]
 
 [project.urls]
@@ -29,7 +30,6 @@ python = "^3.10"
 click = ">=8.0.1"
 dash = "2.18.2"
 dash-bootstrap-components = "1.7.1"
-pandas = ">=2.2.0"
 dash-ag-grid = ">=31.2.0"
 dash-bootstrap-templates = ">=1.2.4"
 dapla-toolbelt = ">=2.0.8, <5.0.0" # Used for reading pdf's
