--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,15 @@ dynamic = ["classifiers"]
 dependencies = [
     "click>=8.0.1",
     "pandas (>=2.3.1,<3.0.0)",
+    "dash (==2.18.2)",
+    "dash-bootstrap-components (==1.7.1)",
+    "dash-ag-grid (>=32.3.1,<33.0.0)",
+    "dash-bootstrap-templates (>=1.2.4)",
+    "dapla-toolbelt (>=2.0.8, <5.0.0)",  # Used for reading pdf's
+    "mpmath>=1.3.0", # Pimemorizer uses this
+    "orjson (>=3.10.16,<4.0.0)",
+    "ipykernel (>=6.29.5,<7.0.0)",
+    "psycopg2-binary (>=2.9.10,<3.0.0)"
 ]
 
 [project.urls]
@@ -24,19 +33,6 @@ ssb-dash-framework = "ssb_dash_framework.__main__:main"
 [tool.poetry]
 classifiers = ["Development Status :: 4 - Beta"]
 requires-poetry = ">=2.0"
-
-[tool.poetry.dependencies]
-python = "^3.10"
-click = ">=8.0.1"
-dash = "2.18.2"
-dash-bootstrap-components = "1.7.1"
-dash-ag-grid = ">=31.2.0"
-dash-bootstrap-templates = ">=1.2.4"
-dapla-toolbelt = ">=2.0.8, <5.0.0" # Used for reading pdf's
-mpmath = ">=1.3.0" # Pimemorizer uses this
-orjson = "^3.10.16"
-ipykernel = "^6.29.5"
-psycopg2-binary = "^2.9.10"
 
 [tool.poetry.group.dev.dependencies]
 pygments = ">=2.10.0"
