--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ mpmath = ">=1.3.0" # Pimemorizer uses this
 orjson = "^3.10.16"
 ipykernel = "^6.29.5"
 psycopg2-binary = "^2.9.10"
+ssb-eimerdb = "^0.2.5"
 
 [tool.poetry.group.dev.dependencies]
 pygments = ">=2.10.0"
