--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,8 @@ dependencies = [
     "orjson (>=3.10.16,<4.0.0)",
     "ipykernel (>=6.29.5,<7.0.0)",
     "psycopg2-binary (>=2.9.10,<3.0.0)",
-    "geopandas (>=1.1.1,<2.0.0)"
+    "geopandas (>=1.1.1,<2.0.0)",
+    "ssb-eimerdb (>=0.2.5,<0.3.0)"
 ]
 
 [project.urls]
