--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,8 @@ dependencies = [
     "ipykernel (>=6.29.5,<7.0.0)",
     "psycopg2-binary (>=2.9.10,<3.0.0)",
     "geopandas (>=1.1.1,<2.0.0)",
-    "ssb-eimerdb (>=0.2.5,<0.3.0)"
+    "ssb-eimerdb (>=0.2.5,<0.3.0)",
+    "sqlalchemy (>=2.0.43,<3.0.0)"
 ]
 
 [project.urls]
