--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,9 @@ dependencies = [
     "ipykernel (>=6.29.5,<7.0.0)",
     "psycopg2-binary (>=2.9.10,<3.0.0)",
     "geopandas (>=1.1.1,<2.0.0)",
-    "ssb-eimerdb (>=0.2.5,<0.3.0)"
+    "ssb-eimerdb (>=0.2.5,<0.3.0)",
+    "ibis (>=3.3.0,<4.0.0)",
+    "ibis-framework[athena] (>=10.8.0,<11.0.0)",
 ]
 
 [project.urls]
