--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ dependencies = [
     "geopandas (>=1.1.1,<2.0.0)",
     "ssb-eimerdb (>=0.2.5,<0.3.0)",
     "sqlalchemy (>=2.0.43,<3.0.0)",
-    "ibis-framework[athena] (>=11.0.0,<12.0.0)",
+    "ibis-framework[postgres] (>=11.0.0,<12.0.0)",
 ]
 
 [project.urls]
