--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
     "ssb-eimerdb (>=0.2.5,<0.3.0)",
     "sqlalchemy (>=2.0.43,<3.0.0)",
     "ibis-framework[postgres] (>=11.0.0,<12.0.0)",
+    "rwrapr (>=0.9.1,<0.10.0)",
 ]
 
 [project.urls]
