--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,6 @@ dynamic = ["classifiers"]
 dependencies = [
     "click>=8.0.1",
     "pandas (>=2.3.1,<3.0.0)",
-    "dash-bootstrap-templates (>=1.2.4)",
     "dapla-toolbelt (>=2.0.8, <5.0.0)",  # Used for reading pdf's
     "mpmath>=1.3.0", # Pimemorizer uses this
     "orjson (>=3.10.16,<4.0.0)",
@@ -23,6 +22,8 @@ dependencies = [
     "dash-ag-grid (>=32.3.2,<33.0.0)",
     "dash (>=3.3.0,<4.0.0)",
     "dash-bootstrap-components (>=2.0.4,<3.0.0)",
+    "rpy2 (>=3.6.4,<4.0.0)",
+    "dash-bootstrap-templates (>=2.1.0,<3.0.0)",
 ]
 
 [project.urls]
