--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ dependencies = [
     "dash-bootstrap-components (>=2.0.4,<3.0.0)",
     "rpy2 (>=3.6.4,<4.0.0)",
     "dash-bootstrap-templates (>=2.1.0,<3.0.0)",
+    "duckdb (==1.3.2)",
 ]
 
 [project.urls]
