--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ dependencies = [
     "sqlalchemy (>=2.0.43,<3.0.0)",
     "ibis-framework[postgres] (>=11.0.0,<12.0.0)",
     "rwrapr (>=0.9.1,<0.10.0)",
+    "ssb-poc-statlog-model (>=0.9.0,<0.10.0)",
 ]
 
 [project.urls]
