--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ dependencies = [
     "geopandas (>=1.1.1,<2.0.0)",
     "ssb-eimerdb (>=0.2.5,<0.3.0)",
     "sqlalchemy (>=2.0.43,<3.0.0)",
-    "ibis-framework[postgres] (>=11.0.0,<12.0.0)",
+    "ibis-framework[polars,postgres] (>=11.0.0,<12.0.0)",
     "rwrapr (>=0.9.1,<0.10.0)",
     "dash-ag-grid (>=32.3.2,<33.0.0)",
     "dash (>=3.3.0,<4.0.0)",
