--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,13 +18,15 @@ dependencies = [
     "geopandas (>=1.1.1,<2.0.0)",
     "ssb-eimerdb (>=0.2.5,<0.3.0)",
     "sqlalchemy (>=2.0.43,<3.0.0)",
-    "ibis-framework[postgres] (>=11.0.0,<12.0.0)",
+    "ibis-framework[polars,postgres] (>=11.0.0,<12.0.0)",
+    "rwrapr (>=0.9.1,<0.10.0)",
     "dash-ag-grid (>=32.3.2,<33.0.0)",
     "dash (>=3.3.0,<4.0.0)",
     "dash-bootstrap-components (>=2.0.4,<3.0.0)",
     "rpy2 (>=3.6.4,<4.0.0)",
     "dash-bootstrap-templates (>=2.1.0,<3.0.0)",
     "duckdb (==1.3.2)",
+    "ssb-poc-statlog-model (>=1.0.0,<2.0.0)",
 ]
 
 [project.urls]
