--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ dependencies = [
     "dash-bootstrap-templates (>=2.1.0,<3.0.0)",
     "duckdb (==1.3.2)",
     "ssb-poc-statlog-model (>=1.0.0,<2.0.0)",
+    "universal-pathlib (>=0.3.7,<0.4.0)",
 ]
 
 [project.urls]
