--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "ssb-dash-framework"
-version = "0.2.2a0"
+version = "0.2.2"
 description = "SSB Dash Framework"
 authors = [{ name = "Magnus Theodor Engh", email = "dor@ssb.no" }]
 license = "GPL-3.0"
