--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,6 @@ dependencies = [
     "mpmath>=1.3.0", # Pimemorizer uses this
     "orjson (>=3.10.16,<4.0.0)",
     "ipykernel (>=6.29.5,<7.0.0)",
-    "psycopg2-binary (>=2.9.10,<3.0.0)",
     "geopandas (>=1.1.1,<2.0.0)",
     "ssb-eimerdb (>=0.2.6,<0.3.0)",
     "sqlalchemy (>=2.0.43,<3.0.0)",
@@ -27,6 +26,7 @@ dependencies = [
     "dash-bootstrap-templates (>=2.1.0,<3.0.0)",
     "duckdb (==1.3.2)",
     "ssb-poc-statlog-model (>=1.0.0,<2.0.0)",
+    "psycopg[pool] (>=3.3.3,<4.0.0)",
 ]
 
 [project.urls]
